added second comments

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <body>
     <!-- THIS IS A CLOCK COMMENT -->
+    <!-- THIS IS A SECOND COMMENT -->
     <div class="wrapper">
       <div class="bar-seconds"></div>
       <div class="number-hours"></div>
