--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <!-- THIS IS A CLOCK COMMENT -->
     <!-- THIS IS A SECOND COMMENT -->
+    <!-- THIS IS A THIRD COMMENT -->
     <div class="wrapper">
       <div class="bar-seconds"></div>
       <div class="number-hours"></div>
